2001-05-23  Hans Petter Jansson  <hpj@ximian.com>

	* shares-conf.in: XML tags: browseable -> browse, writable -> write.

2001-05-24  Chema Celorio  <chema@celorio.com>

	* network.pl.in (xst_network_get_interface_replace_table): added
	RH 7.1 based on RH 7.0

	* network-conf.in: added RH 7.1

2001-05-23  Chema Celorio  <chema@celorio.com>

	* users-conf.in: added RH 7.1

2001-05-23  Arturo Espinosa <arturo@ximian.com>

	* network.pl.in (xst_network_debian_woody_set_auto): Fixed
	invariant bug in while loop (bug 2714 fixed).

2001-05-23  Tambet Ingo  <tambet@ximian.com>

	* boot.pl.in (xst_boot_set_global): Quote globals with spaces
	if neccecary.
	(xst_boot_conf_replace_image): Reverted from 1.23 changes,
	fixes bugs 2986 and 2989.

2001-05-22  Hans Petter Jansson  <hpj@ximian.com>

	* shares-conf.in (xml_parse_conf): It's path, not point.

2001-05-20  Theo van Klaveren <t.vanklaveren@student.utwente.nl>

	* filesys.pl.in (xst_filesys_mount_cmd_parse): New function,
	parses output from 'mount -p' on FreeBSD.

	* platform.pl.in (check_freebsd): New function, double-checks
	FreeBSD version by querying the sysctl kern.version.
	(xst_platform_guess): Also check for FreeBSD.

	* shares-conf.in: Add FreeBSD to supported platforms.

	* users-conf.in: Add FreeBSD to supported platforms. Add paths
	for shadow_names, login_defs_names and skel_dir on FreeBSD.
	(read_passwd_shadow): Munge shell comments from passwd and
	shadow_passwd.

2001-05-21  Arturo Espinosa Aldama  <arturo@ximian.com>

	* xml.pl.in (xst_xml_scan): Use new debug_print_log func.

	* users-conf.in (change_user): Just changed arg order to
	make it easier to compare it with man page when checking
	compatibility.

	* replace.pl.in (xst_replace_sh): Changed behaviour so that
	shell var will be expunged from file if $value eq "".
	(xst_replace_sh_join): Implemented. Required by network:suse70

	* platform.pl.in (check_lsb): Check through lsb file, which
	may make our lives easier in the near future.